--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ nbformat = "^5.10.4"
 scikit-optimize = "^0.10.1"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
